[metadata]
name = sdpy
version = 0.0.1
summary = SDpy is a TUI application for querying StarDict dictionaries.
description_file =
    README.rst
author = gryf
author_email = gryf73@gmail.com
license = GPL3
license_files = LICENSE
url = https://github.com/gryf/sdpy
classifier =
    Environment :: Console
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options.entry_points]
console_scripts =
    sdpy=sdpy.sdpy:main

[options]
packages = sdpy
install_requires =
    setuptools
    PyStarDict
    rapidfuzz
    urwid

[bdist_wheel]
universal = 1
